# finance_tool

./: .gitignore  Makefile  README.md  apendix.txt  config.py  dashboard.py  pyproject.toml  setup.py
.github/workflows/: main.yml
cpp_ws_client/: Makefile  client  package-lock.json  package.json
cpp_ws_client/include/:  websocket_client.h  common.h  dpk_handler.h  kafka_producer.h  normalization_rules.h  rdma_producer.h  trafficControl.h  traffic_control.h  webSocketClient.h  webSocketHelper.h  websocket_client.h  zmqHandler.h  zmqKafkaProducer.h  zmq_handler.h  zmq_kafka_producer.h
cpp_ws_client/scripts/: build.sh  run.sh
cpp_ws_client/src/: dpk_handler.cpp  kafka_producer.cpp  main.cpp  rdma_handler.cpp  webSocketClient.cpp  webSocketHelper.cpp  websocket_client.cpp  zmqHandler.cpp  zmqKafkaProducer.cpp  zmq_handler.cpp  zmq_kafka_producer.cpp
finance_tool/: .gitignore  app.py  db.py  init_db.py  main.py  models.py  pyproject.toml
finance_tool/crud/: exchange_models.py  stock_analysis_models.py
finance_tool/data_transformation/: analyze_data.py  cache_manager.py  fetch_data.py
finance_tool/routers/: kafka_consumer.py  kafka_producer.py  spark_processor.py
financial_models/: Makefile  __init__.py  app.py  db.py  fdm_gui.py  fdm_test_results_20250724_220210.csv  fdm_test_results_20250726_074423.csv  fdm_test_results_20250726_075427.csv  fdm_test_results_20250726_075634.csv  fdm_test_results_20250726_124553.csv  fdm_test_results_20250726_124833.csv  financial_models_wrapper.cpp  init_db.py  main.py  models.py
financial_models/crud/: exchange_models.py  stock_analysis_models.py
financial_models/cuda/include/: black_scholes.h  finite_difference.h  monte_carlo.h
financial_models/cuda/src/: black_scholes.cu  finite_diferentiation.cu  monte_carlo.cu
financial_models/data_transformation/: analyze_data.py  cache_manager.py  fetch_data.py
financial_models/downloads/: fdm_result.csv
financial_models/include/: black_scholes.h  finite_difference.h  monte_carlo.h  utils.h
financial_models/routers/: .env  finite_diff_endpoints.py  kafka_consumer.py  spark_processor.py
financial_models/routers/volatility/: utils.py
financial_models/src/: black_scholes.cpp  finite_diference.cpp  finite_difference.cpp  monte_carlo.cpp  utils.cpp
quic_server/: Makefile  nohup.out
quic_server/src/: generate_cert.cpp  generate_cert.h  quic_server.cpp
tests/: test_financial_models.py  test_main.py
