[project]
name = "finance_tool"
version = "0.1.0"
description = ""
authors = [
    {name = "dany1940",email = "59851426+dany1940@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
